--- a/jenkinsfile
+++ b/jenkinsfile
@@ -5,6 +5,8 @@ node{
 
     stage('Ansible'){
        sh '''
+       su - jpereira
+       ssh-copy-id jpereira@192.168.1.27
        ansible-playbook start_project.yaml -i inventaire.yaml
        '''
     }
