--- a/httpd-php/tasks/main.yml
+++ b/httpd-php/tasks/main.yml
@@ -15,7 +15,7 @@
 - name: Ajout de jpereira dans sudo
   template:
     src: /home/jpereira/sudoers.j2
-    dest: /etc/sudoers.d/{{ user }}    
+    dest: /etc/sudoers.d/jpereira    
     validate: 'visudo -cf %s'
 
 - name: Installation httpd et php
