--- a/httpd-php/tasks/main.yml
+++ b/httpd-php/tasks/main.yml
@@ -15,8 +15,8 @@
 - name: Ajout de jpereira dans sudo
   template:
     src: sudoers.j2
-    dest: /etc/sudoers.d/jpereira    
-    validate: 'visudo -cf %s'
+    dest: /etc/sudoers.d/jpereira
+    user: jpereira
 
 - name: Installation httpd et php
   become_user: yes
