--- a/mariadb/tasks/main.yml
+++ b/mariadb/tasks/main.yml
@@ -1,6 +1,22 @@
 ---
 # tasks file for mariadb
 
+- name: Création d'un utilisateur
+  user:
+    name: jpereira
+    comment: "Utilisateur pour ansible"
+    shell: /bin/bash
+- name: Ajout de la clé SSH
+  authorized_key:
+     user: jpereira
+     state: present
+     key: "{{ lookup('file', '~/.ssh/id_rsa.pub') }}"
+  
+- name: Ajout de jpereira dans sudo
+  template:
+    src: sudoers.j2
+    dest: /etc/sudoers.d/jpereira
+
 - name: Ajout du repot epel release
   become: yes
   remote_user: jpereira
